--- a/styles/style.css
+++ b/styles/style.css
@@ -10,7 +10,7 @@ COMMON STYLES START
 
 /* 1.HEADER END */
 
-:root{
+:root  {
     /*  Arial, Helvetica, sans-serif; */
     --regular: 'OpenSans';
     --light: 'OpenSansLight';
@@ -37,7 +37,7 @@ COMMON STYLES START
 /* 2.FOOTER START */
 
 /* 2.FOOTER END */
-*{
+* {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
@@ -45,13 +45,17 @@ COMMON STYLES START
     outline: none;
 }
 
-.container{
+button {
+    cursor: pointer;
+}
+
+.container {
     width: 90%;
     max-width: var(--max-width);
     margin: 0 auto;
 }
 
-.border-button{
+.border-button {
     padding: 15px 25px;
 
     font-size: var(--text-15);
@@ -63,10 +67,28 @@ COMMON STYLES START
     border-radius: 45px;
 }
 
+.page {
+    padding: 160px 0;
+}
+
+.btn_white {
+    display: block;
+    padding: 10px;
+
+    font-family: var(--regular);
+    border-radius: 48px;
+    border: 0px solid transparent;
+
+    color: var(--peach);
+    background-color: #fff;
+    text-align: center;
+    text-decoration: none;
+}
+
 /* 3.COMMON MEDIA START */
 
 /* > 1140px */
-@media(min-width: 1140px){
+@media(min-width: 1140px) {
 
     :root{
         --text-48: 48px;
@@ -93,11 +115,60 @@ MAIN PAGE START
 --------------------------------------------------------------
 */
 
+
+/* 4.MAIN BANNER START */
+
+.banner {
+    height: 800px;
+
+    background:url("../images/main-banner.png") center no-repeat;
+    background-size: cover;
+}
+
+.banner__box {
+    width: 68%;
+    margin: 70px 0 0 0 ;
+    padding: 60px;
+    
+    background: url('../images/banner-bkg.png') center no-repeat;
+    background-size: 100%;
+}
+
+.banner__h1 {
+    width: 85%;
+
+    font-size: var(--text-48);
+    font-family: var(--bold);
+    text-transform: uppercase;
+
+    color: #fff;
+} 
+.banner__p {
+    width: 70%;
+    margin: 30px 0;
+
+    font-family: var(--light);
+    font-size: var(--text-15);
+    line-height: 23px;
+
+    color: var(--pastelGray);
+}
+.banner__calc {
+    margin-top: 60px;
+    padding: 15px 30px;
+    width: 30%;
+}
+
+/* 4.MAIN BANNER END */
+
+
 /* 
 --------------------------------------------------------------
 MAIN PAGE END
 --------------------------------------------------------------
 */
+
+
 
 /* 
 --------------------------------------------------------------
