--- a/styles/header.css
+++ b/styles/header.css
@@ -18,6 +18,14 @@
 
 .header__top-nav {
     width: 100%;
+
+    background-color: transparent;
+    transition: 0.5s;
+}
+
+.header_scroll {
+    background-color: #fff;
+    transition: 0.4s;
 }
 
 .header__top-nav .container {
