--- a/styles/style.css
+++ b/styles/style.css
@@ -27,6 +27,7 @@ COMMON STYLES START
     --text-12: calc( (100vw - 300px)/(1140 - 300) * (12 - 10) + 10px);
     --peach: #A8544A;
     --rosyBrown: #C8928C;
+    --dirtyRosyBrown: #BB928D;
     --gray: #BEBEBE;
     --lightGray: #929292;
     --pastelGray: #D2C4C2;
@@ -83,17 +84,25 @@ a.common-border-button:visited {
     padding: 160px 0;
 }
 
-.common-btn_white {
+.common-btn_white,
+.common-btn_peach {
     display: block;
     padding: 10px;
 
     border-radius: 48px;
     border: 0px solid transparent;
 
-    color: var(--peach);
-    background-color: #fff;
     text-align: center;
     text-decoration: none;
+}
+
+.common-btn_peach {
+    color: #fff;
+    background-color: var(--peach);
+}
+.common-btn_white {
+    color: var(--peach);
+    background-color: #fff;
 }
 
 a.common-btn_white:visited {
@@ -291,6 +300,12 @@ MAIN PAGE START
     margin: 16px 0 0;
 }
 
+.procedure__order-btn {
+    width: 45%;
+    padding: 15px;
+    margin: 45px 0 0 0;
+}
+
 /* 7.1.SLIDER START */
 
 .slider__wrapper {
@@ -316,7 +331,6 @@ MAIN PAGE START
 .slider__tab {
     display: flex;
     align-items: center;
-
 }
 
 .slider__tabs {
@@ -360,7 +374,6 @@ MAIN PAGE START
 a.slider_active-tab {
     display: flex;
     align-items: center;
-
 
     background-color: var(--peach);
     transform: scale(1.7);
@@ -426,11 +439,151 @@ a.slider_active-tab {
     box-shadow: 0 0 0 0 ;
 }
 
-
-
 /* 7.1.SLIDER END */
 
 /* 7.PROCEDURE END */
+
+/* 8.PRICES START */
+
+/* 8.1.TABS OF PRICES START */
+
+.prices__h2 {
+    text-align: center;
+}
+
+.prices__tabs {
+    display: flex;
+    width: 100%;
+    margin: 20px 0 0;
+}
+
+.prices__tab {
+    width: 50%;
+}
+
+.prices__tab a {
+    display: block;
+    width: 100%;
+    padding: 31px;
+
+    font-size: var(--text-24);
+    font-family: var(--bold);
+
+    color: var(--pastelGray);
+    text-decoration: none;
+    text-align: center;
+}
+
+.prices__tabs hr {
+    height: 2px;
+
+    border: 0px solid transparent;
+    background-color: var(--middleDirtyWhite);
+
+}
+
+a.prices__active-tab {
+    color: var(--peach);
+}
+
+hr.prices__active-tab {
+    display: block;
+    height: 3px;
+
+    border-radius: 3px;
+    background-color: var(--peach) ;
+}
+
+/* 8.1.TABS OF PRICES END */
+
+/* 8.2.PRICES TARIFFS START */
+
+.prices__tariffs {
+    display: none;
+    justify-content: space-between;
+    margin: 68px 0 100px 0;
+}
+
+.active-tariff {
+    display: flex;
+}
+
+.prices__tariff {
+    position: relative;
+    width: 23%;
+    padding: 0 17px 170px;
+
+    border: 2px solid var(--middleDirtyWhite);
+    text-align: center;
+}
+
+.prices__tariff-h2{
+    padding: 28px 0 45px ;
+    margin: -2px 0 30px;
+
+    font-size: var(--text-15);
+    font-family: var(--bold);
+
+    color: #fff;
+    background: url('../images/tariff-rectangle.svg') 50% 0  no-repeat;
+    background-size: 80%;
+    text-align: center;
+    transition: 0.3s;
+}
+
+.prices__tariff:hover .prices__tariff-h2 {
+    background: url('../images/peach-tariff-rectangle.svg') 50% 0  no-repeat;
+    background-size: 80%;
+    transition: 0.3s;
+}
+
+.prices__p {
+    padding: 19px 5px;
+
+    font-size: var(--text-14);
+
+    border-top: 1px solid var(--middleDirtyWhite);
+}
+
+.prices__tariff :nth-child(2){
+   border-top: 0px solid transparent;
+}
+
+.prices__order-btn {
+    position: absolute;
+    width: 88%;
+    bottom: 74px;
+    left: 6%;
+    padding: 20px;
+
+    font-size: var(--text-15);
+
+    background-color: var(--dirtyRosyBrown) ;
+    transition: 0.3s;
+
+}
+
+.prices__tariff:hover .prices__order-btn {
+    background-color: var(--peach) ;
+    transition: 0.3s;
+}
+
+.prices__more-btn {
+    position: absolute;
+    width: 80%;
+    bottom: 30px;
+    left: 10%;
+
+    font-family: var(--bold);
+    font-size: var(--text-14);
+
+    color: var(--NewYorkPink);
+    text-decoration: none;
+}
+
+/* 8.2.PRICES TARIFFS END */
+
+/* 8.PRICES END */
 
 /* 
 --------------------------------------------------------------
