--- a/styles/style.css
+++ b/styles/style.css
@@ -585,6 +585,61 @@ hr.prices__active-tab {
 
 /* 8.PRICES END */
 
+/* 9.SERVICES START */
+
+.services__h2 {
+    margin: 0 0 73px;
+    text-align: center;
+}
+
+.services__items {
+    display: flex;
+    justify-content: space-between;
+}
+
+.services__item {
+    width: 15%;
+
+    border: 1px solid  var(--middleDirtyWhite);
+    text-align: center;
+}
+
+.services__item a{
+    font-family: var(--semiBold);
+    font-size: var(--text-18);
+
+    color: var(--deepTaupe);
+    text-decoration: none;
+}
+
+.services__img {
+    width: 100%;
+    height: 120px;
+    padding: 20px 0 0;
+}
+
+.services__img svg path {
+    transition: 0.3s;
+} 
+
+.services__item:hover .services__img svg path {
+    fill: #fff;
+    transition: 0.3s;
+} 
+
+.services__name {
+    padding: 15px 25px;
+}
+
+.services__item:hover .services__img{
+    background-color: var(--peach);
+    transition: 0.3s;
+}
+
+
+
+/* 9.SERVICES END */
+
 /* 
 --------------------------------------------------------------
 MAIN PAGE END
