--- a/styles/style.css
+++ b/styles/style.css
@@ -63,9 +63,10 @@ li {
 }
 
 .container {
-    width: 90%;
+    width: 100%;
     max-width: var(--max-width);
     margin: 0 auto;
+    padding: 0 14px;
 }
 
 .common-border-button {
@@ -689,6 +690,78 @@ hr.prices__active-tab {
 }
 
 /* 11.LICENSES END */
+
+/* 12.REVIEWS START */
+
+.reviews {
+    margin: 100px 0;
+    padding: 70px 0 63px;
+    
+    background: url('../images/reviews-bkg.png') center no-repeat;
+    background-size: cover;
+}
+
+.reviews__h2 {
+    color: #fff;
+}
+.reviews .container {
+    max-width: calc(100% - (100% - 1140px)/2);
+    padding: 0;
+    margin-left: calc((100% - 1140px)/2);
+}
+
+/* 12.1.REVIEWS SLIDER START */
+
+.reviews__slider-item {
+    position: relative;
+    margin: 0 32px 40px 0;
+    padding: 20px 70px 118px 40px;
+    
+    background-color: #fff;
+}
+
+.reviews__quote::before {
+    display: block;
+    width: 30px;
+    height: 30px;
+    margin: 0 0 25px;
+
+    content: ' ';
+    background: url('../images/left-quotes-sign.png') center no-repeat;
+    background-size: 100%; 
+}
+
+.reviews__person {
+    position: absolute;
+    display: flex;
+    align-items: stretch;
+    bottom: 30px;
+}
+
+.reviews__person img {
+    width: 57px;
+    height: 57px;
+    margin: 0 18px 0 0 ;
+}
+
+.reviews__full-name {
+    margin: 8px 0 10px;
+    font-family: var(--bold);
+    font-size: var(--text-15);
+
+    color: var(--peach);
+}
+
+.reviews__date {
+    font-size: var(--text-15);
+
+    color: var(--pastelGray);
+}
+
+
+/* 12.1.REVIEWS SLIDER END */
+
+/* 12.REVIEWS END */
 
 /* 
 --------------------------------------------------------------
