--- a/styles/style.css
+++ b/styles/style.css
@@ -13,6 +13,12 @@ COMMON STYLES START
 
 /* 1.HEADER END */
 
+/* 2.FOOTER START */
+
+@import url('footer.css');
+
+/* 2.FOOTER END */
+
 :root  {
     /*  Arial, Helvetica, sans-serif; */
     --regular: 'OpenSans';
@@ -42,9 +48,6 @@ COMMON STYLES START
     --horses: #603631;
 }
 
-/* 2.FOOTER START */
-
-/* 2.FOOTER END */
 * {
     box-sizing: border-box;
     margin: 0;
