--- a/styles/header.css
+++ b/styles/header.css
@@ -222,6 +222,17 @@ a.header__phone {
 /* 3.BLACKOUT START */
 
 .blackout {
+/*
+--------------------------------------------------------------
+УДАЛИТЬ DISPLAY: NONE
+--------------------------------------------------------------
+*/
+    display: none;
+/*
+--------------------------------------------------------------
+УДАЛИТЬ DISPLAY: NONE
+--------------------------------------------------------------
+*/
     opacity: 0;
     position: fixed;
     width: 100vw;
