--- a/styles/header.css
+++ b/styles/header.css
@@ -127,6 +127,10 @@ a.header__phone {
     transition: .3s;
 }
 
+.compensate-for-scrollbar .header{
+    padding-right: 17px;
+} 
+
 /* 1.TOP NAVIGATION END */
 
 /* 2.MAIN MENU START */
@@ -331,7 +335,25 @@ a.header__phone {
 }
 
 .order-popup-p {
-    margin: 30px 0 70px;
+    margin: 30px 0 0;
+}
+
+.common-popup-error {
+    opacity: 0;
+    width: 80%;
+    padding: 15px;
+    margin: 20px auto;
+
+    border: 1px solid var(--peach);
+    border-radius: 7px;
+    background-color: var(--dirtyRosyBrown);
+    color: #fff;
+    transition: .3s;
+}
+
+.form-error .common-popup-error {
+    opacity: 1;
+    transition: .3s;
 }
 
 .order-popup {
@@ -380,6 +402,7 @@ button.popup-btn {
 .popup-active {
     display: flex;
 }
+
 /* 4.ORDER CALL POPUP END */
 
 /* 5.HEADER MEDIA START */
@@ -414,7 +437,9 @@ button.popup-btn {
     }
 
     .menu-wrapper {
-        display: none;
+        opacity: 0;
+        visibility: hidden;
+        left: -100%;
     }
 
     .menu-wrapper .header__phone {
@@ -424,12 +449,14 @@ button.popup-btn {
 
     header.mobile-header_active .menu-wrapper {
         position: absolute;
-        display: block;
         min-width: 250px;
         height:  calc(100vh - 84px);
+        left: 0;
         z-index: 4;
         padding: 30px 0;
 
+        opacity: 1;
+        visibility: visible;
         transition: 0.3s;
         overflow-x: auto;
     }
@@ -606,6 +633,10 @@ button.popup-btn {
         display: flex;
         flex-direction: column;
     }
+
+    .common-popup-error {
+        width: 100%;
+    }
 }
 
 /* 570px */
@@ -618,6 +649,7 @@ button.popup-btn {
     .menu__sub-menu.submenu-mobile-active {
         height: 100vh;
     }
+    
 }
 
 /* 5.HEADER MEDIA END */
